# Agentverse

./: .env.example  .gitignore  README.md  app.py  config.yaml  landing-page.html  requirements.txt  run_gradio.py  setup.bat  setup.sh  start.bat  start.sh
app/agents/: agent_memory.py  base_agent.py  context_manager.py  conversation_manager.py  memory_hooks.py  orchestrator.py  prompt_builder.py  registry.py  router.py
app/agents/TEMPLATE/: __init__.py  agent.yaml  mcp.json  tools.py
app/agents/agent_1/: agent.yaml  mcp.json  tools.py
app/api/: server.py
app/config/: settings.py
app/document_processing/: manager.py  processor.py  storage.py
app/llm/: base.py  claude_provider.py  factory.py  gemini_provider.py  openai_provider.py
app/mcp/: client.py
app/memory/: rag_store.py  session_store.py
app/telemetry/: events.py  gradio_events.py  logger.py  session_logger.py
app/ui/: gradio_app.py
backend/: .env  README.md  requirements.txt  server.py
backend/config/: mcp.json  settings.json  tools.json
backend/data/: app.db  app.db-shm  app.db-wal
backend/documents/: document_metadata.db
data/: app.db  app.db-shm  app.db-wal
desktop-ui/: package-lock.json  package.json
desktop-ui/src/: App.css  App.tsx
desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src-tauri/: tauri.conf.json
tests/: test_llm_factory.py  test_mcp_manager.py  test_router.py  test_settings.py
(+146 files in other folders)
